[tool.poetry]
name = "geoalchemy-spatialite-example"
version = "0.1.0"
description = ""
authors = ["Clemens Zangl <clemens.zangl@gmail.com>"]
readme = "README.md"
packages = [{include = "geolachemy_issue"}]

[tool.poetry.dependencies]
python = "^3.9"
geoalchemy2 = "^0.13.3"
sqlalchemy = "^2.0.16"
shapely = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
